--- a/src/main/resources/templates/winelist.html
+++ b/src/main/resources/templates/winelist.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 	<link type="text/css" rel="stylesheet" href="css/stickyfooter.css" th:href="@{/css/stickyfooter.css}" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 <div class="container">
