--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <title>Poista viini</title>
+    <title>Kirjaudu sisään</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" />
 	<link type="text/css" rel="stylesheet" href="css/stickyfooter.css" th:href="@{/css/stickyfooter.css}" />
@@ -42,7 +42,7 @@
         <form th:action="@{/login}" method="post">
             <div><label> Käyttäjätunnus: <input type="text" name="username"/> </label></div>
             <div><label> Salasana: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Kirjaudu"/></div>
+            <div><input type="submit" class="btn btn-primary" value="Kirjaudu"/></div>
         </form>
         </div>
         <div sec:authorize="isAuthenticated()"><h1>Olet kirjautunut</h1></div>
